# RNA-Factory

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py
app/api/: __init__.py  bpfold_routes.py  copilot_routes.py  copra_routes.py  deeprpi_routes.py  model_config_routes.py  mol2aptamer_routes.py  mxfold2_routes.py  reformer_routes.py  ribodiffusion_routes.py  rnaflow_routes.py  rnaformer_routes.py  rnaframeflow_routes.py  rnamigos2_routes.py  rnampnn_routes.py  ufold_routes.py  zhmolgraph_routes.py
app/copilot/: __init__.py  agent.py  copilot.py  prompts.py  rag.py
app/static/: index.html
app/static/css/: bpfold.css  deeprpi.css  mol2aptamer.css  mxfold2.css  reformer.css  ribodiffusion.css  rnaflow.css  rnaformer.css  rnaframeflow.css  rnamigos2.css  rnampnn.css  standard-input.css  style.css  ufold.css  zhmolgraph.css
app/static/js/: app.js
app/utils/: __init__.py  input.py  output.py  path_manager.py
app/utils/wrappers/: README.md  __init__.py  bpfold_wrapper.py  copra_wrapper.py  deeprpi_wrapper.py  mol2aptamer_wrapper.py  mxfold2_wrapper.py  reformer_wrapper.py  ribodiffusion_wrapper.py  rnaflow_wrapper.py  rnaformer_wrapper.py  rnaframeflow_wrapper.py  rnamigos2_wrapper.py  rnampnn_wrapper.py  ufold_wrapper.py  zhmolgraph_wrapper.py
models/: .gitkeep
models/Mol2Aptamer/: README.md  RNA_smiles (1).ipynb  best_model.txt  mol2aptamer_inference.py  rna_tokenizer.json  smiles_tokenizer.json
models/UFold/: pyproject.toml
models/UFold/data/: input.txt
models/UFold/ufold/: data_generator.py
models/mxfold2/: pyproject.toml
