[project]
name = "software"
version = "0.1.0"
description = "This is the software project 'RNA-Factory' for iGEM team PekingHSC 2025."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.2.0",
    "langgraph>=0.6.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "torch>=2.5.1",
    "pypdf>=4.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "markdown>=3.5.0",
    "pygments>=2.15.0",
    "pdf2image>=1.17.0",
    "transformers>=4.56.1",
    "pytesseract>=0.3.13",
    "bpfold>=0.2.8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "temp*", "models*", "*.venv*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.yaml", "*.yml"]