[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufold"
version = "1.3"
description = "Fast and Accurate RNA Secondary Structure Prediction with Deep Learning"
authors = [
    {name = "UFold Team", email = "ufold@uci.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.19.1",
    "fonttools==4.60.0",
    "fsspec==2025.9.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "munch==4.0.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pyparsing==3.2.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "jupyter>=1.0.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/uci-cbcl/UFold"
Repository = "https://github.com/uci-cbcl/UFold"
Documentation = "https://github.com/uci-cbcl/UFold"
"Bug Tracker" = "https://github.com/uci-cbcl/UFold/issues"

[project.scripts]
ufold = "ufold_predict:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ufold*"]

[tool.setuptools.package-data]
ufold = ["config.json", "*.py"]
